changes to published exe

--- a/Task3MainApp/App.config
+++ b/Task3MainApp/App.config
@@ -3,7 +3,7 @@
 
 	<appSettings>
 		<!-- относительный путь от отцовского exe -->
-		<add key="ChildExePath" value="..\..\..\..\Task3 Child app\bin\Debug\net8.0\Task3ChildApp.exe
+		<add key="ChildExePath" value="..\..\..\..\Child3Exe\Task3ChildApp.exe
 "/>
 	</appSettings>
 	
